--- a/index.html
+++ b/index.html
@@ -133,158 +133,159 @@ permalink: /
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center blurp">
 	<!-- restaurant menu code goes here -->
-		<div class="col-md-8 white">
-			<h2 class="title">Catering</h2>
-      <p>Let us cater your gathering with a heap of deliciously prepared food!</p>
-			<p><a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#orderCatering">Order Catering</button></a></p>
-			<!-- <p><a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#requestFoodCart">Request the Food Cart</button></a></p> -->
-			<div class="banzo-catering">
-				<div id="banzo-menu">
-					<div class="row">
-						<div class="col">
-							<h5 class="menu-headline">Banzo Bars</h5>
-							<p>Our freshly prepared ingredients provide a little of everything for everyone. Each Banzo Bar comes ready as a self-serve buffet. $11.95 per person with a 15 person minimum.</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col">
-							<h6 class="cater-title">Choose Your Style</h6>
-							<div class="row">
-								<div class="col-12 col-sm-4">
-									<div class="menu-item">
-										<p class="menu-title">Sandwich</p>
-										<p class="menu-descript">Comes with full pita per person plus dill pickles and sauces. (Tahini, Chili Garlic, Yogurt Dill)</p>
-									</div>
-								</div>
-								<div class="col-12 col-sm-4">
-									<div class="menu-item">
-										<p class="menu-title">Platter</p>
-										<p class="menu-descript">Comes with 1/2 a pita per person plus majadra rice and sauces. (Tahini, Chili Garlic, Yogurt Dill)</p>
-									</div>
-								</div>
-								<div class="col-12 col-sm-4">
-									<div class="menu-item">
-										<p class="menu-title">Salad</p>
-										<p class="menu-descript">Comes with 1/2 a pita per person plus mixed greens, kalamata olives and lemon agave salad dressing.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-12 col-md-6 col-lg-4">
-							<h6 class="cater-title">All Bars Include</h6>
-							<div class="menu-item">
-								<p class="menu-title">Falafel</p>
-								<p class="menu-title">Chicken</p>
-								<p class="menu-title">Homemade Hummus</p>
-								<p class="menu-title">Chopped Salad</p>
-								<p class="menu-title">Pita Bread</p>
-							</div>
-						</div>
-						<div class="col-sm-12 col-md-6 col-lg-4">
-							<h6 class="cater-title">Add-Ons</h6>
-							<p class="menu-descript">99¢ a person</p>
-							<div class="menu-item">
-								<p class="menu-title">Pita Bread</p>
-								<p class="menu-title">Majadra Rice</p>
-								<p class="menu-title">Mixed Greens</p>
-								<p class="menu-title">Hand-Cut Chips</p>
-								<p class="menu-title">Pickles</p>
-							</div>
-						</div>
-						<div class="col-md-12 col-lg-4">
-							<h6 class="cater-title">Specialty Items</h6>
-							<p class="menu-descript">Call for prices and availability<br>
-							*May need additional notice.</p>
-							<div class="menu-item">
-								<p class="menu-title">Beef Kofta</p>
-								<p class="menu-title">Roasted Beet Salad</p>
-								<p class="menu-title">Morroccan Carrots</p>
-								<p class="menu-title">Roasted Cauliflower</p>
-								<p class="menu-title">Babaganush &amp; Pita</p>
-								<p class="menu-title">Couscous Tabouli</p>
-							</div>
-						</div>
-					</div>
+		<div class="col-md-8">
+      <div class="p-4 white">
+  			<h2 class="title">Catering</h2>
+        <p>Let us cater your gathering with a heap of deliciously prepared food!</p>
+  			<p><a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#orderCatering">Order Catering</button></a></p>
+  			<!-- <p><a href="javascript:void(0)"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#requestFoodCart">Request the Food Cart</button></a></p> -->
+			  <div class="banzo-catering">
+  				<div id="banzo-menu">
+  					<div class="row">
+  						<div class="col">
+  							<h5 class="menu-headline">Banzo Bars</h5>
+  							<p>Our freshly prepared ingredients provide a little of everything for everyone. Each Banzo Bar comes ready as a self-serve buffet. $11.95 per person with a 15 person minimum.</p>
+  						</div>
+  					</div>
+  					<div class="row">
+  						<div class="col">
+  							<h6 class="cater-title">Choose Your Style</h6>
+  							<div class="row">
+  								<div class="col-12 col-sm-4">
+  									<div class="menu-item">
+  										<p class="menu-title">Sandwich</p>
+  										<p class="menu-descript">Comes with full pita per person plus dill pickles and sauces. (Tahini, Chili Garlic, Yogurt Dill)</p>
+  									</div>
+  								</div>
+  								<div class="col-12 col-sm-4">
+  									<div class="menu-item">
+  										<p class="menu-title">Platter</p>
+  										<p class="menu-descript">Comes with 1/2 a pita per person plus majadra rice and sauces. (Tahini, Chili Garlic, Yogurt Dill)</p>
+  									</div>
+  								</div>
+  								<div class="col-12 col-sm-4">
+  									<div class="menu-item">
+  										<p class="menu-title">Salad</p>
+  										<p class="menu-descript">Comes with 1/2 a pita per person plus mixed greens, kalamata olives and lemon agave salad dressing.</p>
+  									</div>
+  								</div>
+  							</div>
+  						</div>
+  					</div>
+  					<div class="row">
+  						<div class="col-sm-12 col-md-6 col-lg-4">
+  							<h6 class="cater-title">All Bars Include</h6>
+  							<div class="menu-item">
+  								<p class="menu-title">Falafel</p>
+  								<p class="menu-title">Chicken</p>
+  								<p class="menu-title">Homemade Hummus</p>
+  								<p class="menu-title">Chopped Salad</p>
+  								<p class="menu-title">Pita Bread</p>
+  							</div>
+  						</div>
+  						<div class="col-sm-12 col-md-6 col-lg-4">
+  							<h6 class="cater-title">Add-Ons</h6>
+  							<p class="menu-descript">99¢ a person</p>
+  							<div class="menu-item">
+  								<p class="menu-title">Pita Bread</p>
+  								<p class="menu-title">Majadra Rice</p>
+  								<p class="menu-title">Mixed Greens</p>
+  								<p class="menu-title">Hand-Cut Chips</p>
+  								<p class="menu-title">Pickles</p>
+  							</div>
+  						</div>
+  						<div class="col-md-12 col-lg-4">
+  							<h6 class="cater-title">Specialty Items</h6>
+  							<p class="menu-descript">Call for prices and availability<br>
+  							*May need additional notice.</p>
+  							<div class="menu-item">
+  								<p class="menu-title">Beef Kofta</p>
+  								<p class="menu-title">Roasted Beet Salad</p>
+  								<p class="menu-title">Morroccan Carrots</p>
+  								<p class="menu-title">Roasted Cauliflower</p>
+  								<p class="menu-title">Babaganush &amp; Pita</p>
+  								<p class="menu-title">Couscous Tabouli</p>
+  							</div>
+  						</div>
+  					</div>
 
-					<div class="row">
-						<div class="col">
-							<h5 class="menu-headline">Party Trays</h5>
-							<p>Mix and match to create your perfect menu for an event of any size. 48 ounce size recommended for 12-15 guests. 80 ounce size recommended for 20-25 guests.</p>
-						</div>
-					</div>
-					<div class="row d-flex justify-content-between">
-						<div class="col-md-12 col-lg-5 d-flex flex-row">
-							<div class="menu-item d-flex flex-row">
-								<div class="p-2">
-									<p class="menu-title">Spreads</p>
-									<p>Hummus &amp; Pita</p>
-									<p>Babaganush &amp; Pita</p>
-								</div>
-								<div class="p-2">
-									<p class="menu-title">48oz</p>
-									<p>$32</p>
-									<p>$32</p>
-								</div>
-								<div class="p-2">
-									<p class="menu-title">80oz</p>
-									<p>$50</p>
-									<p>$50</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-12 col-lg-5 d-flex flex-row">
-							<div class="menu-item d-flex flex-row">
-								<div class="p-2">
-									<p class="menu-title">Signature Salads</p>
-									<p>Chopped Salad</p>
-									<p>Couscous Tabouli</p>
-								</div>
-								<div class="p-2">
-									<p class="menu-title">48oz</p>
-									<p>$28</p>
-									<p>$28</p>
-								</div>
-								<div class="p-2">
-									<p class="menu-title">80oz</p>
-									<p>$45</p>
-									<p>$45</p>
-								</div>
-							</div>
-						</div>
-					</div>
+  					<div class="row">
+  						<div class="col">
+  							<h5 class="menu-headline">Party Trays</h5>
+  							<p>Mix and match to create your perfect menu for an event of any size. 48 ounce size recommended for 12-15 guests. 80 ounce size recommended for 20-25 guests.</p>
+  						</div>
+  					</div>
+  					<div class="row d-flex justify-content-between">
+  						<div class="col-md-12 col-lg-5 d-flex flex-row">
+  							<div class="menu-item d-flex flex-row">
+  								<div class="p-2">
+  									<p class="menu-title">Spreads</p>
+  									<p>Hummus &amp; Pita</p>
+  									<p>Babaganush &amp; Pita</p>
+  								</div>
+  								<div class="p-2">
+  									<p class="menu-title">48oz</p>
+  									<p>$32</p>
+  									<p>$32</p>
+  								</div>
+  								<div class="p-2">
+  									<p class="menu-title">80oz</p>
+  									<p>$50</p>
+  									<p>$50</p>
+  								</div>
+  							</div>
+  						</div>
+  						<div class="col-md-12 col-lg-5 d-flex flex-row">
+  							<div class="menu-item d-flex flex-row">
+  								<div class="p-2">
+  									<p class="menu-title">Signature Salads</p>
+  									<p>Chopped Salad</p>
+  									<p>Couscous Tabouli</p>
+  								</div>
+  								<div class="p-2">
+  									<p class="menu-title">48oz</p>
+  									<p>$28</p>
+  									<p>$28</p>
+  								</div>
+  								<div class="p-2">
+  									<p class="menu-title">80oz</p>
+  									<p>$45</p>
+  									<p>$45</p>
+  								</div>
+  							</div>
+  						</div>
+  					</div>
 
-					<div class="row">
-						<div class="col-12 col-sm-4">
-							<div class="menu-item">
-								<p class="menu-title">Falafel a la Carte</p>
-								<p class="menu-descript">5 falafel balls served with tahini sauce. $3.95</p>
-							</div>
-						</div>
-						<div class="col-12 col-sm-4">
-							<div class="menu-item">
-								<p class="menu-title">Sample Platter</p>
-								<p class="menu-descript">Includes hummus, chopped salad, babaganush, couscouse tabouli, and pita bread. Serves up to 12 guests. $32</p>
-							</div>
-						</div>
-						<div class="col-12 col-sm-4">
-							<div class="menu-item">
-								<p class="menu-title">Dessert</p>
-								<p class="menu-descript">Baklava (original or vegan) Other specialties on request</p>
-							</div>
-						</div>
-					</div>
+  					<div class="row">
+  						<div class="col-12 col-sm-4">
+  							<div class="menu-item">
+  								<p class="menu-title">Falafel a la Carte</p>
+  								<p class="menu-descript">5 falafel balls served with tahini sauce. $3.95</p>
+  							</div>
+  						</div>
+  						<div class="col-12 col-sm-4">
+  							<div class="menu-item">
+  								<p class="menu-title">Sample Platter</p>
+  								<p class="menu-descript">Includes hummus, chopped salad, babaganush, couscouse tabouli, and pita bread. Serves up to 12 guests. $32</p>
+  							</div>
+  						</div>
+  						<div class="col-12 col-sm-4">
+  							<div class="menu-item">
+  								<p class="menu-title">Dessert</p>
+  								<p class="menu-descript">Baklava (original or vegan) Other specialties on request</p>
+  							</div>
+  						</div>
+  					</div>
 
-					<div class="row">
-						<div class="col">
-							<p class="subtext">All catering orders must be placed 48 hours in advance. Chaffing equipment available for rent upon request</p>
-						</div>
-					</div>
+  					<div class="row">
+  						<div class="col">
+  							<p class="subtext">All catering orders must be placed 48 hours in advance. Chaffing equipment available for rent upon request</p>
+  						</div>
+  					</div>
 
-				</div><!-- end Banzo menu -->
-			</div><!-- end Banzo catering -->
-
+  				</div><!-- end Banzo menu -->
+			  </div><!-- end Banzo catering -->
+      </div>
 		</div>
 	</div>
 
